documentation: fixed alignment in usage info

--- a/documentation/css/docs.css
+++ b/documentation/css/docs.css
@@ -45,6 +45,7 @@ table {
   }
     td {
       padding: 9px 15px 9px 0;
+      vertical-align: top;
     }
 table.definitions {
   width: auto;
